- Adapted panel header sizing (to prevent overflow).

--- a/app/ptmvision/static/css/index.css
+++ b/app/ptmvision/static/css/index.css
@@ -81,10 +81,28 @@ body {
   box-shadow: 0px 1px 5px var(--color-2);
 }
 
+#menu-grid .row {
+  height: 100%;
+}
+
+#menu-grid .row .cell {
+  height: 100%;
+}
+
+.logo {
+  height: 90%;
+  margin-top: 5px;
+}
+
+.logo img {
+  height: inherit;
+}
+
 .menu-button {
   color: var(--background-color-1);
   border-radius: 4px;
-  height: calc(5vh);
+  height: 85%;
+  margin-top: 5px;
 }
 
 .menu-button:hover {
@@ -110,15 +128,6 @@ body {
 .citation {
   font-style: italic;
   color: var(--color-2);
-}
-
-.logo {
-  margin-top: 0.5vh;
-  height: 4vh;
-}
-
-.logo img {
-  height: 100%;
 }
 
 .proceed-button {
@@ -202,12 +211,12 @@ body {
   width: 90%;
   height: auto;
   min-height: 60vh;
-  overflow-y: auto;
+  overflow: scroll;
 }
 
 #panel-overview-chart {
   position: absolute;
-  top: 4vh;
+  top: 50px;
   right: 4px;
   bottom: 4px;
   left: 4px;
@@ -250,8 +259,8 @@ body {
   width: 100%;
   background-color: var(--background-color-1);
   border-radius: 4px !important;
-  margin-top: 1vh;
-  margin-bottom: 1vh;
+  margin-top: 10px;
+  margin-bottom: 10px;
   height: fit-content;
   min-height: 2vh;
   max-height: 30vh;
@@ -279,7 +288,7 @@ body {
 
 #panel-dashboard-chart {
   position: absolute;
-  top: 4vh;
+  top: 50px;
   right: 4px;
   bottom: 4px;
   left: 4px;
